[tool.poetry]
name = "fun-with-bazel"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "3.7.9"
click = "^7.1.1"
jsonpath-ng = "^1.5.1"
matplotlib = "^3.3.3"
numpy = "^1.19.4"
pandas = "^1.1.3"
rope = "^0.18.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.3"
isort = "^5.6.4"
mypy = "^0.782"
pep8-naming = "^0.11.1"
pytest = "^6.0.1"
pytest-cov = "^2.10.0"

[build-system]
requires = ["poetry>=1.0.10"]
build-backend = "poetry.masonry.api"
